<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RoleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_class_teacher"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/grey_80"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_role_yes"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_rounded_red"
            android:text="@string/yes"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_role_no"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_rounded_blue"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>