<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fitsSystemWindows="true"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textAllCaps="true"
                android:text="@string/verification1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/img_code_verification" />

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="OTP has been sent to you on your mobile phone. Please enter it below"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_60" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_90"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_verify"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_red"
                android:text="@string/verification"
                android:textColor="@android:color/white" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/resend_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="false"
                android:text="@string/resend_code"
                android:textColor="@color/grey_80" />

        </LinearLayout>

    </RelativeLayout>