<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/blue_900"
                app:srcCompat="@drawable/ic_close" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_5" />

        <View
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mlarge">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:drawableEnd="@drawable/ic_arrow_drop"
                    android:focusable="false"
                    android:hint="@string/choose_class"
                    android:inputType="none"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:drawableEnd="@drawable/ic_arrow_drop"
                    android:focusable="false"
                    android:hint="@string/choose_section"
                    android:inputType="none"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:drawableEnd="@drawable/ic_arrow_drop"
                    android:focusable="false"
                    android:hint="@string/choose_subject"
                    android:inputType="none"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/add"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@drawable/btn_rounded_red"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>