<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_mlarge"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/choose_class_teacher"
                    android:textColor="@color/overlay_dark_60"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout2" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_user"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="112dp"
                    android:background="@drawable/blue_round"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                    app:layout_constraintEnd_toEndOf="@+id/profile_image"
                    app:layout_constraintStart_toStartOf="@+id/profile_image"
                    app:srcCompat="@drawable/ic_camera" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_first_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:hint="@string/first_name"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@id/et_class_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_class"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:drawableEnd="@drawable/ic_arrow_drop"
                        android:focusable="false"
                        android:hint="@string/choose_class"
                        android:inputType="none"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@id/et_section_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_class_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_section"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:drawableEnd="@drawable/ic_arrow_drop"
                        android:focusable="false"
                        android:hint="@string/choose_section"
                        android:inputType="none"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@id/et_subject_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_section_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_subject"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:drawableEnd="@drawable/ic_arrow_drop"
                        android:focusable="false"
                        android:hint="@string/choose_subject"
                        android:inputType="none"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_last_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:hint="@string/last_name"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_subject_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:backgroundTint="@color/colorPrimaryDark"
        app:rippleColor="@color/colorPrimary"
        app:srcCompat="@drawable/ic_add"
        app:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
